fix checkbox alignment issues

--- a/src/components/menuoption/menuoption.scss
+++ b/src/components/menuoption/menuoption.scss
@@ -67,7 +67,7 @@ $option-menu-gap: .5rem;
 
 .number-of-style-box {
         font-size: 1.4rem;
-        padding: 1rem 1rem 1.4rem 1.4rem;
+        padding: 1rem 1.4rem 1.4rem 1.8rem;
 
         p{
             padding: 0;
@@ -79,7 +79,7 @@ $option-menu-gap: .5rem;
     justify-content: space-between;
     display: flex;
     align-items: center;
-    margin-top: 1.4rem;
+    margin-top: 1.7rem;
 
     
 }
@@ -175,7 +175,7 @@ $option-menu-gap: .5rem;
    color: $secondary-color;
    font-weight: 500;
    float: right;
-   margin-top: 2rem;
+   margin-top: 2.5rem;
    padding: .8rem 1.5rem;
    font-size: 1.45rem;
    border: none;
